0.31 Friday 27th November 2009
	Move to Makefile.PL
	use Test::Differences in the testsuite if available.
	Rearrange the testsuite so you don't keep tripping over yourself.
	Dropped 5.00503 backwards compatibility, allows some 5.6isms and
	dropping the shonky Cwd code.
	All taint 'bugs' are now the same as the behaviour of File::Find,
	documentation has been added to describe this.


0.30 Wednesday 1st June, 2006
	Made './//././././///.//././/////./blah' be treated the same 
        as './blah' (it gets turned into 'blah')

0.29 Tuesday 16th May, 2006
	Kludged around {min,max}depth and trailing slashes in path
	names.

0.28 Tuesday 18th May, 2004
	exposed %X_tests and @stat_tests as package variables, and make a
	_call_find method for File::Find::Rule::Filesys::Virtual

0.27 Wednesday 25th February, 2004
	Changed to write_makefile_pl to 'traditional' from
	'passthrough'.  Fixes INDIRECTLY REPORTED install problems
	caused by new Module::Build being backwards incompatible.

0.26 Monday 10th November, 2003
	Typo/thinko in File::Find::Rule::Extending corrected (spotted
	by Jim Cromie)

	Optimization to the stat-based tests.  They now compile to code
	fragments saving much subroutine dispatch.

0.25 Wednesday 22nd October, 2003
	applied a patch from Leon Brocard to make the tests ignore CVS dirs
	as well as .svn dirs.

	reworked part of t/File-Find-Rule.t to not assume that t/foobar will
	always be 10 bytes in size. (rt.cpan.org #3838)

	now we install the findrule script

0.24 Monday 6th October, 2003
	when you specify an extra of C<{ follow => 1 }> File::Find stops
	populating $File::Find::topdir.  This leads to warnings noise so
	instead we now track $topdir ourselves.

0.23 Friday 3rd October, 2003
	make the extras hash work and add a proper test for it. (Doh!)

0.22 Friday 3rd October, 2003
	add in ->extras hash for passing things through to File::Find::find

0.21 Monday 15th September, 2003 
	pod glitch in File::Find::Rule::Procedural spotted and fixed