@@ -1,3 +1,7 @@
+HEAD
+        Rework the referencing of anyonymous subroutines internally,
+        closes RT#46599 (Reported by Kevin Ryde)
+
 0.31 Friday 27th November 2009
 	Move to Makefile.PL
 	use Test::Differences in the testsuite if available.
